# cookiecutter-personal

./: README.md  cookiecutter.json  requirements.txt
hooks/: post_gen_project.py
{{cookiecutter.__repository_name}}/: LICENSE  README.md  pyproject.toml
{{cookiecutter.__repository_name}}/{{cookiecutter.__project_slug}}/: __init__.py  __main__.py  cli.py
{{cookiecutter.repository_name}}/: LICENSE  pyproject.toml
{{cookiecutter.repository_name}}/src/: cli.py
{{cookiecutter.repository_name}}/{{cookiecutter.__project_slug}}/: __main__.py
